# LanguageTestDictionary

./: English Test Dictionary.py  LICENSE  LanguageTestDictionary.py  README.md  config.py  main.py  pyproject.toml
app/: config.py  fonts.py  functions.py  logger.py  main.py  text_field_functionality.py  tk_functions.py
app/mode_functions/: choose_window.py  test_mode_choose.py
app/mode_functions/mode_window/: activation.py
app/mode_functions/species_modes/: onehudred_mode.py  onehudred_test.py  red_test.py  red_test_mode.py  sentences_test.py  sentences_test_mode.py
app/mode_functions/test_mode/: activation.py  test_mode_cls.py
app/other/: custom_print.py  get_path.py  instructions.py  json_functions.py  red_list.example.json
app/other/db/: cache_files.json  json_functions.py
app/other/instruction/: instructions.py
app/test_mode_functions/: activation.py  onehudred_test.py  red_test.py  sentences_test.py  test_mode.py  test_mode_choose.py
app/test_mode_functions/onehungred/: listbox_editor.py  one_hundred_mode.py
app/test_mode_functions/species_modes/: onehudred_test.py  red_test.py
app/test_mode_functions/test_mode/: activation.py  listbox_editor.py  test_mode_cls.py
app/tests/: configuration.py  configurations.py
app/tests/fixtures/: test_root.py
app/tests/test_main_window/: test_create_speaker.py  test_init_main_window.py
app/tests/test_mode_functions/: test_choose_window.py  test_species_modes.py
app/tests/test_other_functions/: test_get_path.py  (+4 more)
app/translator/: languages_worker.py  speaker_functions.py  text_field_functionality.py
(+34 files in other folders)
